2023-08-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp--last-hop-directory): Adapt docstring.  Move down.
	(tramp-set-completion-function): Revert default case to
	`file-exists-p', the workaround isn't needed anymore.
	(tramp-get-completion-methods): Rename argument to MULTI-HOP.
	(tramp-completion-remote-containers): Add :version.
	(tramp-multi-hop-p): Bind `tramp-verbose' to nil.
	(tramp-accept-process-output): Use `with-tramp-suspended-timers'
	also for the other processes.

	* tramp-container.el (tramp-container--completion-function):
	Use METHOD as argument, instead of PROGRAM.  Determine program
	from METHOD entry in `tramp-methods'.  Bind `non-essential' to
	nil.  Use a file property as cache.
	(tramp-container--completion-function): Use adapted arguments when
	setting for "docker" and "podman".

2023-08-29  Gene Goykhman  <gene@indigo1.com>

	* tramp.el (tramp--last-hop-directory): Add new variable.
	(tramp-completion-handle-file-name-all-completions): Use container
	host directory to execute container program on remote host.
	(tramp-set-completion-function): FIXME: for now, don't constrain
	allowable completion methods to only those present on the local system.
	(tramp-completion-remote-containers): Add customize option to
	provide completion candidates for containers running on remote hosts.

	* tramp-container.el (tramp-container--completion-function):
	Set default directory to last hop.
	(tramp-set-completion-function): Don't use executable-find for
	container program since it might not be running locally.

2023-08-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-null-hop): Add ;;;###tramp-autoload cookie.
	Use pseudo method "local".
	(tramp-file-name-unify): IF VEC is nil, set it to `tramp-null-hop'.
	(tramp-set-completion-function): Support also functions with
	METHOD as argument.
	(tramp-get-completion-methods): Add argument HOP.
	(tramp-completion-handle-file-name-all-completions): Use it.