@@ -166,7 +166,7 @@ METHOD is the Tramp method to be used for \"ps\", either
 This function is used by `tramp-set-completion-function', please
 see its function help for a description of the format."
   (let ((default-directory
-	 (or (and tramp-completion-remote-containers tramp--last-hop-directory)
+	 (or (and (member method tramp-completion-multi-hop-methods) tramp--last-hop-directory)
 	     tramp-compat-temporary-file-directory))
 	(program (tramp-get-method-parameter
 		  (make-tramp-file-name :method method) 'tramp-login-program))
