@@ -1,3 +1,10 @@
+2023-08-31  Gene Goykhman  <gene@indigo1.com>
+
+	* tramp.el: Add custom variable tramp-container-multi-hop-methods.
+
+	* tramp-container.el: Check if METHOD is a member of
+	`tramp-container-multi-hop-methods' before attempting completion.
+
 2023-08-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp--last-hop-directory): Adapt docstring.  Move down.
